[package]
name = "pq_bitcoin-lib"
version = "0.1.0"
edition = "2024"

[dependencies]
alloy-sol-types = { workspace = true }
hex="0.4"
hashes = { workspace = true }
secp256k1 = {workspace = true}
sha3 = { git = "https://github.com/sp1-patches/RustCrypto-hashes", tag = "patch-sha2-0.10.8-sp1-4.0.0-rc.3" }

