[package]
version = "0.1.0"
name = "pq_bitcoin-program"
edition = "2021"

[dependencies]
alloy-sol-types = { workspace = true }
alloy-primitives = { workspace = true }
sp1-zkvm = "5.0.0"
pq_bitcoin-lib = { path = "../lib" }
hashes = { package = "bitcoin_hashes", version = ">= 0.12, <= 0.14", default-features = false }
secp256k1 = {workspace = true}
